@@ -23,6 +23,9 @@ Version 1.5.3:
     * Parts of the new widget libary are deemed stable enough for testing and
       have been started to replace the old code.
 
+  * Bug fixes:
+    * Fixed OOS bug when giving control and having move in undo stack.
+
 Version 1.5.3:
   * Campaigns
     * Descent into Darkness
